...
    <string name="new_game">Game</string>
    <string name="new_place">Post Code</string>
    <string name="new_date">Date</string>
    <string name="new_time">Time</string>
    <string name="new_players">How many Players?</string>
    <string name="new_description">Description</string>
    <string name="new_button">Publish</string>
    <string name="new_response_fine">Your Session is saved!</string>
    <string name="new_error">Something went wrong! Please try it again later.</string>
    <string-array name="game_types">
        <item>Online</item>
        <item>Offline</item>
    </string-array>
...
    <string name="join_button_join">Join</string>
    <string name="join_button_leave">Leave</string>
    <string name="leave_error">You cannot leave your own sessions.</string>
    <string name="leave_success">You are no longer part of this session.</string>
    <string name="leave_retracted">You have retracted your join request.</string>
    <string name="new_message">There are new messages in your inbox.</string>
    <string name="confirm" translatable="false">OK</string>
    <string name="title_activity_search">Search</string>
    <string name="btn_search">Search</string>
    <string name="title_activity_add_session">New Session</string>
    <string name="title_activity_search_result">Search Result</string>
    <string name="participants">Participants:&#160;</string>
    <string name="title_activity_send_message">Send Message</string>
...
